<resources>
    <string name="app_name">createInterface</string>
    <string name="Name1">Full Name</string>
    <string name="Email">Email Address</string>
    <string name="Phone">Contact Number</string>

    <string name="CPassword">Confirm Password</string>
    <string name="Button">Register</string>
    <string name="textRegister">Already Have an Account ?</string>
    <string name="textlink">Login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="new45">"   Home"</string>
    <string name="new10">"  Add New Product"</string>
    <string name="prod1">"   Add New Product"</string>




    <string name="toolbartitle1">Home</string>
    <string name="title1">Home</string>
    <string name="toolbartitle2">"    Home"</string>
    <string name="toolbar2title">"   Add New Product"</string>
    <string name="button1">Add Product Image</string>
    <string name="category">Category</string>
    <string name="Product_Name">Product Name</string>
    <string name="Discription">Discription</string>
    <string name="Available_Qty">Available Qty</string>
    <string name="Price">Price</string>
    <string name="Offer">Offer (%)</string>
    <string name="submit">Submit</string>
    <string name="view">View</string>
    <string name="update">"   Update Product"</string>
    <string name="Bottle">Bottle</string>
    <string name="Metal_Bottle">Metal Bottle</string>
    <string name="School_users">School users</string>
    <string name="Qty">140</string>
    <string name="Price2">450</string>
    <string name="offer2">15</string>
    <string name="updatebtn">Update</string>
        <string name="title4">Bottles</string>
    <string name="title_4">"   Bottles"</string>
    <string name="AvQty">Av.Qty</string>
    <string name="Discount">Discount</string>
    <string name="qty2">100</string>

    <string name="price2">450</string>
    <string name="dis">15%</string>
    <string name="Edit2">Edit</string>
    <string name="deletebtn">Delete</string>
    <string name="My_Orders">My Orders</string>
    <string name="myorders">"   My Orders"</string>
    <string name="qtyn">"Qty  : "</string>
    <string name="qtyn2">" 10"</string>
    <string name="dis2">: 15%</string>
    <string name="Total">Total Amount  :</string>
    <string name="amount">3875</string>
    <string name="billoffer">Total Bill Offer</string>
    <string name="tot">Total</string>
    <string name="val">:  6587</string>
    <string name="order">"   Orders"</string>
    <string name="add_my">Add To My Orders</string>
    <string name="select">Select Qty</string>
    <string name="qty3">Qty</string>
    <string name="add_contact">"   Add Contact"</string>
    <string name="hname">Hotline Name</string>
    <string name="Hnumber">Hotline Number</string>
    <string name="update_contact">"   Update Contact"</string>
    <string name="hnameeg">Dehiwala Branch</string>
    <string name="phone">077056XXXX</string>
    <string name="cn">"   Contact"</string>
    <string name="wellawathe">Wellawathe Branch</string>
    <string name="kaluthara">Kaluthara Branch</string>
    <string name="categ">"   Category"</string>

    <string name="addnew">" Add New Category"</string>
    <string name="bag">Bages</string>
    <string name="sticker">Sticker Cards</string>
    <string name="pen">Pens</string>
    <string name="Ebooks">CR Books</string>
    <string name="WorkBooks">Work Books</string>
    <string name="Assesories" />
    <string name="aasc">Assesories</string>
    <string name="story">Story Books</string>
    <string name="addcat">"   Add New Category"</string>
    <string name="catname">Category Name</string>
    <string name="updatecat">"   Update Category"</string>
    <string name="Sticker">Sticker Cards</string>
    <string name="cancl">Cancel</string>
    <string name="register1">"Already have an account ? "</string>
    <string name="link">" Login"</string>
    <string name="name">Full Name</string>
    <string name="email">Email Address</string>
    <string name="cont">Contact Number</string>
    <string name="password">Password</string>
    <string name="cpasswod">Confirm Password</string>
    <string name="breg">Register</string>
    <string name="user">"        User Name"</string>
    <string name="user2">User Name</string>
    <string name="login">Login</string>
    <string name="logintext">"Don't have an account ? "</string>
    <string name="eprofile">"   Edit Profile"</string>
    <string name="unam">Name</string>
    <string name="mail">Email</string>
    <string name="phon">Phone</string>

    <string name="save">Save</string>
    <string name="messi">Lional Messi</string>
    <string name="messimail">Messi10@gmail.com</string>
    <string name="phnon2">0770567366</string>
    <string name="pass2">Messi123</string>
    <string name="cpass">********</string>
    <string name="profile">"   Profile"</string>
    <string name="adphoto">Add Photo</string>
    <string name="phone4">"Phone  :  "</string>
    <string name="mail2">Email</string>
    <string name="name3">"Name  : "</string>
    <string name="mail3">"Email  : "</string>
    <string name="name4">"Name   : "</string>
    <string name="mail44">"Email    : "</string>
    <string name="notic">"   Notice"</string>
    <string name="off">15% OFF</string>
    <string name="note1">15% off for customer who</string>
    <string name="note2">Order more than Rs1000</string>
    <string name="date22">08/10/2021</string>
    <string name="addnotice">"   Add Notice"</string>
    <string name="newtit">Title</string>
    <string name="disc">Discription</string>
    <string name="newdate">Date</string>
    <string name="updatenotice">"   Update Notice"</string>
    <string name="hintdisc">15% off for customer who order more than Rs.1000</string>
    <string name="title_activity_main26">MainActivity26</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main27">Main27Activity</string>
    <string name="delivery">"   Delivery"</string>
    <string name="tpay">Total Pay</string>
    <string name="onumber">Order Number</string>
    <string name="oamuoint">6587</string>
    <string name="oval">Rs 6587</string>
    <string name="oname">Name</string>
    <string name="ophone2">Phone</string>
    <string name="oaddress">Address</string>
    <string name="onuval">#0078</string>
    <string name="oname23">Ahamed</string>
    <string name="daddd">Address</string>
    <string name="daddress">Delivary Address</string>
    <string name="proceed">Proceed to Pay</string>
    <string name="payment23">"   Payment"</string>
    <string name="card">Card Name</string>
    <string name="cnum">" Card Number"</string>
    <string name="Expiry">Expiry Date</string>
    <string name="ccv">CCV</string>
    <string name="ccnum">Card Number</string>
    <string name="confirm34">Confirm</string>
    <string name="otp">"   OTP"</string>
    <string name="otp23">Insert OTP</string>
    <string name="msg1">a SMS with an OTP has been sent</string>
    <string name="msg22">A maximum of one new OTP per</string>
    <string name="msg33">minute can be requested</string>
    <string name="otp99">Re-send OTP</string>
    <string name="otp44">Enter OTP</string>
    <string name="delistat">"   Delivery Status"</string>
    <string name="Oid">OrderID</string>
    <string name="name908">Name</string>
    <string name="Total_val">Total Value</string>
    <string name="stat">Status</string>
    <string name="upddel">Update/Delete</string>
    <string name="orderID34">#0213</string>
    <string name="ahmed">Ahamed</string>
    <string name="ivalue34">1995</string>
    <string name="delivered">Delivered</string>
    <string name="dilstat">"   Delivery Status"</string>
    <string name="oid342">"     OrderID       Name       TotalValue       Status       Update/Delete   "</string>
    <string name="value990">"     #0213       Ahamed       1995     "</string>
    <string name="valunew">"  #0213       Ahamed       1995     "</string>
    <string name="Delivered21">"  Delivered  "</string>
    <string name="pending">"  Pending"</string>
    <string name="oid333">"  OrderID     Name     TotalValue       Status       Update/Delete"</string>
    <string name="oid334">"      OrderID     Name     TotalValue        Status        Update/Delete       "</string>
    <string name="oid335">"      OrderID       Name       TotalValue          Status          Update/Delete"</string>
    <string name="home23">"   Home"</string>
    <string name="paymenthistory">"   Payment History"</string>
    <string name="datenew22">Date</string>
    <string name="onumber226">Order Number</string>
    <string name="OAmount256">Amount</string>
    <string name="datepay">31/05/2021</string>
    <string name="oum76">00112</string>
    <string name="oamount">Rs.995</string>
    <string name="clearaa">Clear All</string>
    <string name="logout56">Log out</string>
    <string name="blackwel">BlackWells Book Shop</string>
    <string name="home22">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="Notification">Notification</string>
    <string name="notice33">Notice</string>
    <string name="message55">Message</string>
    <string name="ccare">Customer Care</string>
    <string name="category554">Categories</string>
    <string name="deliveryst">Delivery Status</string>
    <string name="payhis">Payment History</string>
    <string name="morder">My Order</string>
    <string name="tmsg">Type Your Message</string>
    <string name="hi">HI</string>
    <string name="assist">Hi . How can i assist you</string>
    <string name="metbot">do yo have water bottles</string>

    <string name="yesdo">Yes We do</string>
    <string name="msg776">"   Message"</string>
    <string name="notific">"   Notifications"</string>
    <string name="bf">Black Friday Offers..</string>
    <string name="upto">Up to 25% Off</string>
    <string name="ordercomp">Your Order #00125 is completed</string>
    <string name="uptetime">Time To Update!!!</string>
    <string name="offersonnotic">15% off on Water Bottles</string>
    <string name="clean">Clear</string>
    <string name="newuser">New User Joined</string>
    <string name="join">Ahamed has joined today....</string>
    <string name="rneworder">Received a new Order</string>
    <string name="ordernewno234">Order No #00782</string>
    <string name="seemore">show more</string>
    <string name="dash">"   Dashboard"</string>
    <string name="produ">Product</string>
    <string name="prod">Product</string>
    <string name="categ234">Category</string>
    <string name="prser">Customer Support</string>
</resources>