<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background1"
    tools:context=".MainActivity7">

    <include
        android:id="@+id/toolbar7"
        layout="@layout/toolbar7"
        app:title="@string/order" />

    <Button
        android:id="@+id/button10"
        android:layout_width="107dp"
        android:layout_height="38dp"
        android:background="@color/btnc"
        android:text="@string/My_Orders"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar7" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="377dp"
        android:layout_height="201dp"
        android:layout_marginTop="32dp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button10"
        app:srcCompat="@drawable/bottle1" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="81dp"
        android:layout_height="17dp"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="84dp"
        android:text="@string/category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="79dp"
        android:layout_height="19dp"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="20dp"
        android:text="@string/Product_Name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView33" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="77dp"
        android:layout_height="22dp"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="24dp"
        android:text="@string/Price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView35" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="76dp"
        android:layout_height="23dp"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="28dp"
        android:text="@string/Offer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView36" />

    <TextView
        android:id="@+id/textView48"
        android:layout_width="82dp"
        android:layout_height="21dp"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="24dp"
        android:text="@string/Available_Qty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView37" />

    <TextView
        android:id="@+id/textView49"
        android:layout_width="112dp"
        android:layout_height="23dp"
        android:layout_marginStart="54dp"
        android:layout_marginLeft="54dp"
        android:layout_marginTop="84dp"
        android:text="@string/Bottle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView33"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

    <TextView
        android:id="@+id/textView50"
        android:layout_width="109dp"
        android:layout_height="20dp"
        android:layout_marginStart="54dp"
        android:layout_marginLeft="54dp"
        android:layout_marginTop="16dp"
        android:text="@string/Metal_Bottle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView35"
        app:layout_constraintTop_toBottomOf="@+id/textView49" />

    <TextView
        android:id="@+id/textView51"
        android:layout_width="106dp"
        android:layout_height="18dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="24dp"
        android:text="@string/Price2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toEndOf="@+id/textView36"
        app:layout_constraintTop_toBottomOf="@+id/textView50" />

    <TextView
        android:id="@+id/textView52"
        android:layout_width="106dp"
        android:layout_height="19dp"
        android:layout_marginTop="28dp"
        android:text="@string/offer2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.752"
        app:layout_constraintStart_toEndOf="@+id/textView37"
        app:layout_constraintTop_toBottomOf="@+id/textView51" />

    <TextView
        android:id="@+id/textView53"
        android:layout_width="110dp"
        android:layout_height="17dp"
        android:layout_marginTop="28dp"
        android:text="@string/qty2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.767"
        app:layout_constraintStart_toEndOf="@+id/textView48"
        app:layout_constraintTop_toBottomOf="@+id/textView52" />

    <TextView
        android:id="@+id/textView54"
        android:layout_width="85dp"
        android:layout_height="19dp"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="27dp"
        android:text="@string/select"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView48" />

    <EditText
        android:id="@+id/editTextTextPersonName7"
        android:layout_width="97dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:ems="10"
        android:hint="@string/qty3"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.826"
        app:layout_constraintStart_toEndOf="@+id/textView54"
        app:layout_constraintTop_toBottomOf="@+id/textView53" />

    <Button
        android:id="@+id/button11"
        android:layout_width="145dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@color/btnc"
        android:text="@string/add_my"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView54" />

</androidx.constraintlayout.widget.ConstraintLayout>