<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background1"
    tools:context=".MainActivity24">

    <TextView
        android:id="@+id/textView121"
        android:layout_width="173dp"
        android:layout_height="28dp"
        android:layout_marginTop="12dp"
        android:text="@string/phone"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView118" />

    <TextView
        android:id="@+id/textView120"
        android:layout_width="173dp"
        android:layout_height="28dp"
        android:layout_marginTop="76dp"
        android:text="@string/oval"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView26" />

    <TextView
        android:id="@+id/textView119"
        android:layout_width="173dp"
        android:layout_height="28dp"
        android:layout_marginTop="20dp"
        android:text="@string/onuval"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView120" />

    <TextView
        android:id="@+id/textView118"
        android:layout_width="173dp"
        android:layout_height="28dp"
        android:layout_marginTop="28dp"
        android:text="@string/oname23"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.589"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView119" />

    <include
        android:id="@+id/toolbar24"
        layout="@layout/toolbar24"
        app:title="@string/delivery" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="173dp"
        android:layout_height="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="76dp"
        android:text="@string/tpay"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView26" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="171dp"
        android:layout_height="33dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="16dp"
        android:text="@string/onumber"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="171dp"
        android:layout_height="35dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/oname"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="167dp"
        android:layout_height="29dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/ophone2"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="173dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/daddress"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.727"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView121" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="163dp"
        android:layout_height="35dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="28dp"
        android:text="@string/oaddress"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/button3"
        android:layout_width="154dp"
        android:layout_height="45dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:background="@color/btnc"
        android:text="@string/view"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="757dp" />

    <ImageView
        android:id="@+id/imageView26"
        android:layout_width="272dp"
        android:layout_height="176dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar24"
        app:srcCompat="@drawable/delivery2" />

    <Button
        android:id="@+id/button33"
        android:layout_width="179dp"
        android:layout_height="54dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/btnc"
        android:text="@string/proceed"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.908"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5" />

</androidx.constraintlayout.widget.ConstraintLayout>